# internal/handler/product_handler.go
@@ -3,7 +3,6 @@ package handler
 import (
 	"net/http"
 
-	"github.com/golang-jwt/jwt/v5"
 	"github.com/labstack/echo/v4"
 	uuid "github.com/satori/go.uuid"
 	"gorm.io/gorm"
@@ -52,12 +51,11 @@ func (h productHandler) getProduct(c echo.Context) error {
 func (h productHandler) createProduct(c echo.Context) error {
 	var err error
 
-	user := c.Get("user").(*jwt.Token)
-	claims := user.Claims.(*util.Claims)
+	auth := c.Get(util.AuthContextKey).(*util.Claims)
 
 	var product model.Product
 	c.Bind(&product)
-	product.UserID = claims.ID
+	product.UserID = auth.ID
 
 	if err := c.Validate(product); err != nil {
 		return err
@@ -115,9 +113,9 @@ func (h productHandler) HandleRoutes(g *echo.Group) {
 	product := g.Group("/product")
 	{
 		product.GET("", h.getProducts)
-		product.POST("", h.createProduct, middleware.Auth)
-		product.GET("/:id", h.getProduct, middleware.Auth)
-		product.PUT("/:id", h.updateProduct, middleware.Auth, middleware.ProductAuthor)
-		product.DELETE("/:id", h.deleteProduct, middleware.Auth, middleware.ProductAuthor)
+		product.GET("/:id", h.getProduct)
+		product.POST("", h.createProduct, middleware.Auth())
+		product.PUT("/:id", h.updateProduct, middleware.Auth(), middleware.ProductAuthor)
+		product.DELETE("/:id", h.deleteProduct, middleware.Auth(), middleware.ProductAuthor)
 	}
 }
